manifests/python-ingress.tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  namespace: ${namespace}
  annotations:
    cert-manager.io/cluster-issuer: "syndeno-issuer"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "python.plt.ko.syndeno.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python
            port:
              number: 5000
  # tls:
  # - host: ["python.plt.ko.syndeno.net"]
  #   secret_name: "python.plt.ko.syndeno.net"
